<resources>
    <string name="app_name">BottleFlip</string>

    <!-- Instructions Frame -->
    <string name="back_button">Volver al juego</string>
    <string name="title_instructions">Reglas del juego</string>
    <string name="title_challenges">Retos</string>
    <string name="how_to_play_title">¿Como se juega?</string>
    <string name="how_to_play_content">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego</string>
    <string name="who_win_title">¿Quién gana?</string>
    <string name="who_win_content">Gana el último jugador que no abandone el juego</string>
    <string name="animation_image_winner">Winner animated image</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="texto_splash">Bottle Flip</string>
</resources>